<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_mode"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15sp"
    android:weightSum="6"
    tools:context=".activities.WelcomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/dosis"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/sign_in_or_sign_up"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/logo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in"
        style="@style/Button.Transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/rect_4"
        android:fontFamily="@font/dosis"
        android:padding="10sp"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up"
        style="@style/Button.Transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:background="@drawable/rect_4"
        android:fontFamily="@font/dosis"
        android:padding="10sp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp" />

</LinearLayout>