<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_mode"
    android:padding="15sp"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/sign_in"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="15sp"
        android:orientation="vertical"
        android:weightSum="3">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:fontFamily="@font/dosis"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/dark_gray" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/dosis"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/dark_gray" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in"
        style="@style/Button.Transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rect_4"
        android:fontFamily="@font/dosis"
        android:padding="10sp"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp" />

</RelativeLayout>